tests/rosetta/out/Smalltalk/bitmap-midpoint-circle-algorithm.out
/tmp/bitmap-midpoint-circle-algorithm.st:6: parse error, expected ']'
